@@ -303,7 +303,6 @@ libpthread {
     __pthread_unwind; __pthread_get_minstack;
     __pthread_barrier_init; __pthread_barrier_wait;
     __futex_abstimed_wait64; __futex_abstimed_wait_cancelable64;
-    __shm_directory;
     __libpthread_freeres;
   }
 }
